[package]
authors = ["vmos <vmos@fairblock.io>"]
edition = "2018"
name = "pi_rt_file"
version = "0.4.0"
description = "async file 的封装，添加了多线程竞争排序。"
repository = "https://github.com/GaiaWorld/pi_rt_file.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "rt_file"]

[dependencies]
fnv = "1.0"
async-lock = "3.4"
lazy_static = "1.4"
num_cpus = "1.13"
pi-async-rt = "0.1"
pi_async_file = "0.6"
pi_hash = {version = "0.1.1", features = ["xxhash"]}
